# GloBE

./: .gitignore  AM_LOOP_IMPROVEMENTS.md  CITATION.cff  CLEAN_API_SUMMARY.md  COMMIT_MESSAGE.md  FINAL_COMMANDS.md  IMPROVEMENTS_SUMMARY.md  LEGACY_CLEANUP.md  LICENSE  README.md  REFACTORING_SUMMARY.md  TEST_INSTRUCTIONS.md  TODO.md  TRAINING_FOCUS.md  WARM_START_INTEGRATION.md  debug_am_step.py  debug_components.py  fix_am_step_scaling.py  globe_bank_initialization_training_workflow.md  globe_bank_workflow.md  globe_implementation_plan.md  globe_warm_start.md  optimize_am_step.py  pyproject.toml  requirements_test.txt  test_am_step_fix.py  test_conservative_fix.py  test_minimal_training.py  test_qwen_training.py  test_warm_start_methods.py  validate_am_loop.py
globe/: __init__.py
globe/config/: __init__.py  default.yaml
globe/config/bank/: global.yaml
globe/config/cache/: lru.yaml
globe/config/export/: hf.yaml
globe/config/model/: qwen15_moe_a2_7b.yaml
globe/config/sparsity/: entmax.yaml
globe/config/train/: recon.yaml
globe/data/: __init__.py  io_safetensors.py  naming_qwen15.py
globe/eval/: __init__.py  latency_mem.py  recon_metrics.py
globe/infer/: __init__.py  export_hf.py  patch_hf.py
globe/init/: __init__.py  init_bank.py  warm_start.py  zscore.py
globe/modules/: __init__.py  ffn_globe.py  globe_bank.py  globe_mixer.py  precompose_cache.py
globe/train/: __init__.py  fit_banks.py  fit_banks_skeleton.py  loop.py  recon_objective.py
scripts/: export_hf.sh  fit_globe_gate.sh  fit_globe_up.sh
